[gd_scene load_steps=16 format=3 uid="uid://ciqcht1kgj8g0"]

[ext_resource type="Script" uid="uid://cqt4rrvlepcb" path="res://scripts/main_menu.gd" id="1_ow34m"]
[ext_resource type="Texture2D" uid="uid://xshfhsqdpo4o" path="res://sprites/moon.png" id="2_l72w3"]
[ext_resource type="Script" uid="uid://u5nlpg27q6ex" path="res://scripts/moon_2.gd" id="3_826wr"]
[ext_resource type="FontFile" uid="uid://7v5w2d0bkk43" path="res://fonts/Pixelon.ttf" id="4_826wr"]
[ext_resource type="Script" uid="uid://bggx4hfr2q7bw" path="res://button.gd" id="4_ucygd"]
[ext_resource type="Texture2D" uid="uid://btseyiwqf4rvj" path="res://sprites/sky_MM.png" id="5_l72w3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow34m"]
bg_color = Color(0.752941, 0.752941, 0.752941, 0.533333)
border_color = Color(0.659824, 0.890237, 0.185912, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_826wr"]
bg_color = Color(0.909699, 0.724313, 0.590443, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ucygd"]
bg_color = Color(0.936264, 0.795551, 0.695272, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7a2f"]
bg_color = Color(0.868685, 0.646079, 0.483954, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.180392)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mipys"]
bg_color = Color(0.937255, 0.796078, 0.694118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8a8k8"]
bg_color = Color(0.937255, 0.796078, 0.694118, 1)

[sub_resource type="Animation" id="Animation_ucygd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/StartButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(62, 46)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/ExitButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(63, 177)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/StartButton2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(62, -34.35)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/StartButton2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel/ExitButton:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Exit"]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel/StartButton:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start Game"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel/ExitButton:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Panel/StartButton:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_826wr"]
resource_name = "df"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/StartButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(62, 46), Vector2(62, 116.545)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/ExitButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(63, 177), Vector2(63, 216.57)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/StartButton2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0.82, 0.82, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/StartButton2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0666667, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel/StartButton2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(62, -34.35), Vector2(62, 20.275)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel/ExitButton:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Exit", "Easy"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel/StartButton:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Start Game", "Medium"]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Panel/ExitButton:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.516761, 0.999259, 0.485806, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Panel/StartButton:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.926667, 0.56, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mipys"]
_data = {
&"RESET": SubResource("Animation_ucygd"),
&"df": SubResource("Animation_826wr")
}

[node name="menu" type="Node2D"]
script = ExtResource("1_ow34m")

[node name="moon2" type="Sprite2D" parent="."]
position = Vector2(40, 464)
texture = ExtResource("2_l72w3")
script = ExtResource("3_826wr")

[node name="moon1" type="Sprite2D" parent="."]
position = Vector2(1244, 271)
texture = ExtResource("2_l72w3")
script = ExtResource("3_826wr")

[node name="Panel" type="Panel" parent="."]
offset_left = 435.0
offset_top = 210.0
offset_right = 776.0
offset_bottom = 519.0
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ow34m")

[node name="StartButton" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 62.0
offset_top = 46.0
offset_right = 282.0
offset_bottom = 122.0
mouse_force_pass_scroll_events = false
theme_override_fonts/font = ExtResource("4_826wr")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_826wr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ucygd")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7a2f")
text = "Start Game"
script = ExtResource("4_ucygd")

[node name="ExitButton" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 63.0
offset_top = 177.0
offset_right = 283.0
offset_bottom = 253.0
theme_override_fonts/font = ExtResource("4_826wr")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_826wr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mipys")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7a2f")
text = "Exit"

[node name="StartButton2" type="Button" parent="Panel"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 0.82, 0.82, 1)
texture_filter = 1
layout_mode = 0
offset_left = 62.0
offset_top = -34.35
offset_right = 282.0
offset_bottom = 41.65
theme_override_fonts/font = ExtResource("4_826wr")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_826wr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8a8k8")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7a2f")
text = "Hard"
script = ExtResource("4_ucygd")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1551.0
offset_top = 77.0
offset_right = 1551.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sky" type="TextureRect" parent="Background/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1569.0
offset_top = -102.0
offset_right = -1569.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("5_l72w3")
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mipys")
}

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 327.0
offset_top = 29.0
offset_right = 875.0
offset_bottom = 162.0
theme_override_fonts/font = ExtResource("4_826wr")
theme_override_font_sizes/font_size = 131
text = "SCORE: 0"

[connection signal="mouse_entered" from="Panel/StartButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/StartButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Panel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="Panel/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/StartButton2" to="." method="_on_start_button_2_pressed"]
